2007-12-22  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Changed Pushto to Pashto by request of
	Zabeeh khan.
	http://mail.gnome.org/archives/gnome-i18n/2007-December/msg00094.html

2007-12-18  Johannes Schmid <jhs@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in:

	Added ht translation team

2007-12-18  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in: gnome-2-20 branch for ghex
	* releases.xml.in: Fixed some branches (e.g gnome-2-20 in the GNOME
	2.16 set)

2007-12-18  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	glade3 branched for gnome-2-20

2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	file-roller branched for gnome-2-20

2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>

	* data/main.css:
	Added a new class that puts a GNOME foot in the lists
	* templates/list-releases.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-teams.tmpl:
	Updated the lists to show the foot logo instead of a dot

2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/list-languages.tmpl:
	fixed a corner case where it wasn't xhtml compliant
	* templates/list-modules.tmpl: display modules a-la languages (3 columns)
	* templates/people.tmpl: display modules a-la languages (3 columns)


2007-12-12  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-screensaver and nautilus-cd-burner branched for gnome-2-20

2007-12-11  Johannes Schmid <jhs@gnome.org>

	* people.xml.in: Added Massimo Furlani
	* tranlation-teams-xml.in: Added Friulian translation team

2007-12-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: New module 'conduit' in Extra release set.

2007-12-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Deleted scaffold, as it has been moved to the
	archives.
