@@ -270,7 +270,7 @@
       <module id="libbonobo" branch="gnome-2-16"/>
       <module id="libbonoboui" branch="gnome-2-16"/>
       <module id="libgnome" branch="gnome-2-16"/>
-      <module id="libgnomecanvas" branch="gnome-2-16"/>
+      <module id="libgnomecanvas" branch="gnome-2-20"/>
       <module id="libgnomeui" branch="gnome-2-16"/>
     </category>
     <category id="desktop">
@@ -326,7 +326,7 @@
       <module id="gucharmap" branch="gnome-2-16"/>
       <module id="libgnomeprint" branch="gnome-2-12"/>
       <module id="libgnomeprintui" branch="gnome-2-12"/>
-      <module id="libgtop" branch="gnome-2-16"/>
+      <module id="libgtop" branch="gnome-2-20"/>
       <module id="libwnck" branch="gnome-2-16"/>
       <module id="metacity" branch="gnome-2-16"/>
       <module id="nautilus" branch="gnome-2-16"/>
@@ -356,7 +356,7 @@
       <module id="libbonobo"/>
       <module id="libbonoboui"/>
       <module id="libgnome" branch="gnome-2-18"/>
-      <module id="libgnomecanvas" branch="gnome-2-18"/>
+      <module id="libgnomecanvas" branch="gnome-2-20"/>
       <module id="libgnomeui" branch="gnome-2-18"/>
     </category>
     <category id="desktop">
@@ -400,7 +400,7 @@
       <module id="gnome-session" branch="gnome-2-18"/>
       <module id="gnome-system-monitor" branch="gnome-2-18"/>
       <module id="gnome-system-tools" branch="gnome-2-18"/>
-      <module id="gnome-terminal" branch="gnome-2-18"/>
+      <module id="gnome-terminal" branch="gnome-2-20"/>
       <module id="gnome-themes" branch="gnome-2-18"/>
       <module id="gnome-user-docs"/>
       <module id="gnome-utils" branch="gnome-2-18"/>
@@ -411,10 +411,10 @@
       <module id="gtkhtml" branch="gnome-2-18"/>
       <module id="gtksourceview" branch="gnome-2-18"/>
       <module id="gucharmap"/>
-      <module id="libgnomekbd" branch="gnome-2-18"/>
+      <module id="libgnomekbd" branch="gnome-2-20"/>
       <module id="libgnomeprint" branch="gnome-2-18"/>
       <module id="libgnomeprintui"/>
-      <module id="libgtop" branch="gnome-2-18"/>
+      <module id="libgtop" branch="gnome-2-20"/>
       <module id="libwnck" branch="gnome-2-18"/>
       <module id="metacity" branch="gnome-2-18"/>
       <module id="nautilus" branch="gnome-2-18"/>
