@@ -1,3 +1,8 @@
+2007-12-22  Johannes Schmid <jhs@gnome.org>
+
+	* releases.xml.in:
+	Reverted changes of 2007-12-18
+
 2007-12-22  Claude Paroz  <claude@2xlibre.net>
 
 	* translation-teams.xml.in: Changed Pushto to Pashto by request of
